<resources>
    <string name="app_name">Kubota Contact Centre</string>
    <string name="action_settings">Settings</string>
    <string name="form_prefix">คำนำหน้า</string>
    <string name="form_name">ชื่อ</string>
    <string name="form_surname">นามสกุล</string>
    <string name="form_gender_male">ชาย</string>
    <string name="form_gender_female">หญิง</string>
    <string name="form_id_num">เลขที่บัตรประชาชน</string>
    <string name="form_person_type_general">บุคคลทั่วไป</string>
    <string name="form_person_type_corporation">นิติบุคคล</string>
    <string name="form_birth_date">วัน-เดือน-ปีเกิด</string>
    <string name="form_age">อายุ</string>
    <string name="form_phone">เบอร์โทรศัพท์บ้าน</string>
    <string name="form_email">อีเมลล์</string>
    <string name="form_fax">แฟกซ์</string>
    <string name="form_skl_phone">เบอร์โทร SKL</string>
    <string name="form_mobile_phone1">เบอร์มือถือ1</string>
    <string name="form_mobile_phone2">เบอร์มือถือ2</string>
    <string name="form_owned_vehicle_number">จำนวนรถที่เป็นเจ้าของ</string>
    <string name="form_housename">บ้านเลขที่</string>
    <string name="form_buildingname">ชื่อหมู่บ้าน/อาคาร</string>
    <string name="form_floor">ชั้น</string>
    <string name="form_room">ห้อง</string>
    <string name="form_villageno">หมู่</string>
    <string name="form_branch">ซอย</string>
    <string name="form_road">ถนน</string>
    <string name="form_tambon">ตำบล</string>
    <string name="form_amphoe">อำเภอ</string>
    <string name="form_province">จังหวัด</string>
    <string name="form_postalcode">รหัสไปรษณีย์</string>
    <string name="form_skc_address_insurance">ที่อยู่ตามบัตรรับประกัน/ส่งเอกสาร</string>
    <string name="form_skc_address_skl">ที่อยู่จาก SKL</string>
    <string name="form_skc_address_welcome">ที่อยู่จาก Welcome Call</string>
    <string name="form_skc_survey_general">แบบสอบถาม</string>
    <string name="form_skc_survey_welcome_call">แบบสอบถาม Welcome Call</string>
    <string name="form_survey_agri_area">พืชที่เพาะปลูก(ไร่)</string>
    <string name="form_survey_income">รายได่ต่อปี</string>
    <string name="form_contact_skl_update">มีการอัพเดจาก SKL</string>
    <string name="icon_description">icon</string>
    <string name="login_warning_text">"Username or password might be wrong, Please try again"</string>
    <string name="add_button">เพิ่ม</string>
    <string name="interest_model">รุ่นที่สนใจ</string>
    <string-array name="interest_product">
        <item>สินค้าที่สนใจ</item>
        <item>รถแทรกเตอร์</item>
        <item>รถเกี่ยวนวดข้าว</item>
        <item>รถดำนา</item>
        <item>รถขุด</item>
        <item>ยังไม่สนใจ</item>
    </string-array>
    <string name="agri_area">พื้นที่เพาะปลูก</string>
    <string-array name="customer_status">
        <item>สถานะการติดตามลูกค้า</item>
        <item>สอบถามลูกค้า</item>
        <item>สนใจซื้อสินค้า</item>
        <item>สนใจซื้อสินค้าอย่างมาก</item>
        <item>รอผลอนุมัติสินเชื่อ</item>
        <item>วางเงินมัดจำแล้ว</item>
    </string-array>
    <string name="activity_subject">Subject</string>
    <string name="activity_start_date">Start Date</string>
    <string name="activity_regarding">Regarding</string>
    <string name="activity_due_date">Due Date</string>
    <string name="description">Description</string>
    <string name="account_name">Account Name*</string>
    <string name="account_parent">Parent Account</string>
    <string name="account_ticker">Ticker Symbol</string>
    <string name="account_phone">Phone Number</string>
    <string name="account_fax">Fax</string>
    <string name="account_website">Website</string>
    <string name="account_part1">Part 1</string>
    <string name="account_part2">Part 2</string>
    <string name="account_street1">Street 1</string>
    <string name="account_street2">Street 2</string>
    <string name="account_street3">Street 3</string>
    <string name="account_city">City</string>
    <string name="account_state">State</string>
    <string name="account_postal_code">Postal Code</string>
    <string name="account_country">Country</string>
    <string name="company_profile">Company Profile</string>
    <string name="industry">Industry</string>
    <string name="ownership">Ownership</string>
    <string name="sic_code">SIC Code</string>
    <string name="marketing">Marketing</string>
    <string name="originating_lead">Originating Lead</string>
    <string name="last_campaign_date">Last Campaign Date</string>
    <string name="marketing_material">Marketing Materials</string>
    <string name="send">Send</string>
    <string name="do_not_send">Do Not Send</string>
    <string name="billing">Billing</string>
    <string name="currency">Currency</string>
    <string name="credit_limit">Credit Limit</string>
    <string name="credit_hold">Credit Hold</string>
    <string name="payment_terms">Payment Terms</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="contact_pref">Contact Preferences</string>
    <string name="email">Email</string>
    <string name="bulk_email">Bulk Email</string>
    <string name="phone">Phone</string>
    <string name="mail">Mail</string>
    <string name="shipping_method">Shipping Method</string>
    <string name="chassis_no">หมายเลขรถ</string>
    <string name="engine_no">หมายเลขเครื่อง</string>
    <string name="model">รุ่น</string>
    <string name="status_change_date">วันที่เปลี่ยนสถานะ</string>
    <string name="adms_remark">หมายเหตุจาก ADMS</string>
    <string name="contract_no">เลขที่สัญญา</string>
    <string name="purchase_date">วันที่ซื้อ</string>
    <string name="customer">ลูกค้า</string>
    <string name="vehicle_owner_name">ชื่อผู้ใช้รถ</string>
    <string name="vehicle_owner_phone">เบอร์โทรศัพท์ผู้ใช้รถ</string>
    <string name="store">ร้านค้า</string>
    <string name="shipping">Shipping</string>
    <string name="freight">Freight Terms</string>
    <string name="fob">FOB</string>
    <string name="no_charge">No Charge</string>
    <string name="vip_card">วีไอพีการ์ด</string>
    <string name="vipstartdate">วันที่ออกบัตร</string>
    <string name="expireddate">วันที่หมดอายุ</string>
</resources>