<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".SKCModule.SKCForm01"
    android:tag="skc01"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/skc_form1_prefix"
                android:hint="@string/form_prefix"
                android:cursorVisible="true"
                android:drawableLeft="@drawable/ic_person_outline" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/skc_form1_name"
                android:hint="@string/form_name"
                 />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/skc_form1_surname"
                android:layout_weight="0.4"
                android:hint="@string/form_surname" />
        </android.support.design.widget.TextInputLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:id="@+id/skc_form1_gender"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_gender_male"
                android:id="@+id/skc_form1_gender1"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_gender_female"
                android:id="@+id/skc_form1_gender2" />
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/skc_form1_idnum"
                android:hint="@string/form_id_num"
                android:drawableLeft="@drawable/ic_credit_card" />
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/skc_form1_persontype"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_person_type_general"
                android:id="@+id/skc_form1_persontype1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_person_type_corporation"
                android:id="@+id/skc_form1_persontype2"
                android:checked="false" />
        </RadioGroup>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:inputType="date"
                android:ems="10"
                android:id="@+id/skc_form1_birthdate"
                android:layout_column="0"
                android:drawableLeft="@drawable/ic_cake"
                android:drawableRight="@drawable/ic_event_18dp"
                android:hint="@string/form_birth_date"
                android:focusable="false"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_age"
            android:textSize="@dimen/age_text_size"
            android:id="@+id/skc_form1_age"
            android:layout_gravity="center_vertical" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/skc_form1_phone"
                android:layout_column="0"
                android:hint="@string/form_phone"
                android:drawableLeft="@drawable/ic_call_18dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:ems="10"
                android:id="@+id/skc_form1_email"
                android:layout_column="0"
                android:hint="@string/form_email"
                android:drawableLeft="@drawable/ic_email_18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/skc_form1_fax"
                android:layout_column="0"
                android:hint="@string/form_fax"
                android:drawableLeft="@drawable/ic_print_18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/skc_form1_sklphone"
                android:hint="@string/form_skl_phone"
                android:drawableLeft="@drawable/ic_call_18dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/skc_form1_mobphone1"
                android:hint="@string/form_mobile_phone1"
                android:drawableLeft="@drawable/ic_call_18dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/skc_form1_mobphone2"
                android:hint="@string/form_mobile_phone2"
                android:drawableLeft="@drawable/ic_call_18dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
        </android.support.design.widget.TextInputLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <EditText

            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/skc_form1_productnumber"
            android:hint="@string/form_owned_vehicle_number"
            android:drawableLeft="@drawable/ic_action_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

    </TableRow>
</TableLayout>

