<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="3">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/vertical_tab_active"
            android:text="@string/form_skc_address_insurance"
            android:id="@+id/skc_form2_menu01" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_skc_address_welcome"
            android:id="@+id/skc_form2_menu02"
            android:background="@drawable/vertical_tab_inactive" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_skc_address_skl"
            android:id="@+id/skc_form2_menu03"
            android:background="@drawable/vertical_tab_inactive" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/skc_form2_content"
        android:layout_weight="1">
        <include
            layout="@layout/fragment_repeat_address"
            />
    </RelativeLayout>

</LinearLayout>
