<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:baselineAligned="false"
    tools:context="com.theteus.kubota.AccountModule.AccountForm01"
    android:gravity="center_vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="25dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/account_form1_name"
                android:drawableStart="@drawable/ic_person"
                android:drawableLeft="@drawable/ic_person"
                android:ems="15"
                android:layout_gravity="center_horizontal"
                android:hint="@string/account_name" />
            </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_supervisor_account_black"
                android:drawableStart="@drawable/ic_supervisor_account_black"
                android:hint="@string/account_parent"
                android:id="@+id/account_form1_parent"
                android:layout_gravity="end" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/account_form1_ticker"
                android:drawableLeft="@drawable/ic_action_ticket"
                android:drawableStart="@drawable/ic_action_ticket"
                android:ems="15"
                android:layout_gravity="center_horizontal"
                android:hint="@string/account_ticker"
                android:maxLength="10" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="25dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:id="@+id/account_form1_phone"
                android:ems="15"
                android:drawableLeft="@drawable/ic_phone"
                android:drawableStart="@drawable/ic_phone"
                android:layout_gravity="center_horizontal"
                android:hint="@string/account_phone"
                android:maxLength="50" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/account_form1_fax"
                android:drawableLeft="@drawable/ic_print"
                android:drawableStart="@drawable/ic_print"
                android:ems="15"
                android:layout_gravity="center_horizontal"
                android:hint="@string/account_fax"
                android:inputType="phone"
                android:maxLength="50" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/account_form1_web"
                android:drawableLeft="@drawable/ic_public"
                android:drawableStart="@drawable/ic_public"
                android:ems="15"
                android:layout_gravity="center_horizontal"
                android:hint="@string/account_website"
                android:inputType="textUri" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</LinearLayout>
